--- a/index.html
+++ b/index.html
@@ -11,43 +11,36 @@
             font-family: Arial, sans-serif;
             text-align: center;
             overflow: hidden;
-            margin: 0;
-            padding: 0;
         }
-
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 48px;
+            font-size: 40px;
             color: #d10000;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
             margin-bottom: 20px;
-            padding: 20px 10px;
         }
-
         .heart {
             position: absolute;
             color: red;
             font-size: 24px;
             animation: float 6s infinite;
         }
-
         @keyframes float {
             0% { transform: translateY(100vh) scale(1); opacity: 1; }
             100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
         }
-
         .envelope {
             position: relative;
-            width: 60vw;
-            height: 50vh;
+            width: 70vw;
+            height: 40vh;
             margin: 50px auto;
             background: #ff6666;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             cursor: pointer;
             overflow: hidden;
+            transition: all 0.3s ease;
         }
-
         .triangle {
             position: absolute;
             top: 0;
@@ -60,51 +53,43 @@
             transform: translateX(-50%);
             transition: transform 0.5s;
         }
-
         .envelope.open .triangle {
             transform: translateX(-50%) rotateX(180deg);
         }
-
         .letter {
             position: absolute;
-            width: 55vw;
-            height: 40vh;
+            width: 65vw;
+            height: auto;
             background: white;
             top: 100%;
             left: 50%;
             transform: translateX(-50%);
-            padding: 40px;
+            padding: 20px;
             border-radius: 5px;
             transition: top 0.5s;
             text-align: center;
-            font-size: 24px;
+            font-size: 20px;
             font-weight: bold;
             color: #d10000;
         }
-
         .envelope.open .letter {
             top: 50px;
         }
-
         .love-image {
             display: block;
             margin: 20px auto;
-            width: auto;
-            max-width: 80%;
-            max-height: 200px;
+            width: 80%;
+            max-width: 250px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
-
         .audio-container {
             display: none;
             margin-top: 20px;
         }
-
         .controls {
             margin-top: 10px;
         }
-
         .button {
             background-color: #d10000;
             color: white;
@@ -115,80 +100,22 @@
             border-radius: 5px;
             margin: 5px;
         }
-
         .button:hover {
             background-color: #b30000;
         }
-
-        /* Media Queries for Mobile */
-        @media (max-width: 768px) {
+        
+        /* Mobile adjustments */
+        @media (max-width: 600px) {
             h1 {
-                font-size: 36px;
-                padding: 20px 10px;
+                font-size: 30px;
             }
-
             .envelope {
                 width: 80vw;
-                height: 60vh;
+                height: 35vh;
             }
-
-            .triangle {
-                border-left: 40vw solid transparent;
-                border-right: 40vw solid transparent;
-                border-bottom: 30vh solid #d9534f;
-            }
-
             .letter {
                 width: 75vw;
-                height: auto;
-                font-size: 20px;
-                padding: 30px;
-            }
-
-            .love-image {
-                max-width: 90%;
-                max-height: 150px;
-            }
-
-            .button {
-                font-size: 16px;
-                padding: 8px 16px;
-            }
-        }
-
-        /* Media Queries for very small devices (phones in portrait mode) */
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 28px;
-                padding: 15px 5px;
-            }
-
-            .envelope {
-                width: 90vw;
-                height: 70vh;
-            }
-
-            .triangle {
-                border-left: 45vw solid transparent;
-                border-right: 45vw solid transparent;
-                border-bottom: 35vh solid #d9534f;
-            }
-
-            .letter {
-                width: 85vw;
-                height: auto;
                 font-size: 18px;
-                padding: 20px;
-            }
-
-            .love-image {
-                max-width: 90%;
-                max-height: 120px;
-            }
-
-            .button {
-                font-size: 14px;
-                padding: 6px 12px;
             }
         }
     </style>
@@ -246,8 +173,10 @@
 
             if (envelope.classList.contains("open")) {
                 image.style.display = "block"; // Prikazuje sliku kada je pismo otvoreno
+                playMusic();
             } else {
                 image.style.display = "none"; // Sakriva sliku ako pismo nije otvoreno
+                pauseMusic();
             }
         }
         
