--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         .love-image {
             display: block;
             margin: 20px auto;
-            width: 80%;
-            max-width: 250px;
+            max-width: 90%; /* Podesio širinu da slika ne izlazi iz okvira */
+            height: auto; /* Održava proporcionalnost slike */
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
