--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         .love-image {
             display: block;
             margin: 20px auto;
-            max-width: 100%; /* Obezbeđuje da slika ne izlazi iz okvira */
-            max-height: 80%; /* Ograničava visinu slike tako da ostane unutar pisma */
-            object-fit: contain; /* Održava proporcije slike i uklapa je unutar okvira */
+            width: 100%; /* Postavlja širinu slike na 100% */
+            max-height: 70%; /* Ograničava visinu slike */
+            object-fit: cover; /* Održava proporciju slike i ispunjava prostor */
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
