--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="triangle"></div>
         <div class="letter">
             Volim te Nešo 💕
-            <img src="https://i.ibb.co/kgzWCCk4/IMG-2937.jpg" alt="Slika" class="love-image" />
+            <img src="https://i.ibb.co/tw54DDWX/A2154-B94-4474-401-A-AC2-F-28-A3487-E6492.jpg" alt="Slika" class="love-image" />
         </div>
     </div>
     
