--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         }
         .envelope {
             position: relative;
-            width: 70vw;
-            height: 40vh;
+            width: 80vw;
+            height: 45vh;
             margin: 50px auto;
             background: #ff6666;
             border-radius: 10px;
@@ -47,9 +47,9 @@
             left: 50%;
             width: 0;
             height: 0;
-            border-left: 30vw solid transparent;
-            border-right: 30vw solid transparent;
-            border-bottom: 25vh solid #d9534f;
+            border-left: 40vw solid transparent;
+            border-right: 40vw solid transparent;
+            border-bottom: 20vh solid #d9534f;
             transform: translateX(-50%);
             transition: transform 0.5s;
         }
@@ -58,7 +58,7 @@
         }
         .letter {
             position: absolute;
-            width: 65vw;
+            width: 70vw;
             height: auto;
             background: white;
             top: 100%;
@@ -78,9 +78,8 @@
         .love-image {
             display: block;
             margin: 20px auto;
-            width: 100%; /* Postavlja širinu slike na 100% */
-            max-height: 70%; /* Ograničava visinu slike */
-            object-fit: cover; /* Održava proporciju slike i ispunjava prostor */
+            width: 90%;
+            max-width: 300px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
@@ -111,12 +110,15 @@
                 font-size: 30px;
             }
             .envelope {
-                width: 80vw;
-                height: 35vh;
+                width: 85vw;
+                height: 50vh;
             }
             .letter {
-                width: 75vw;
+                width: 80vw;
                 font-size: 18px;
+            }
+            .love-image {
+                max-width: 90%;
             }
         }
     </style>
@@ -127,7 +129,7 @@
         <div class="triangle"></div>
         <div class="letter">
             Volim te Nešo 💕
-            <img src="https://i.ibb.co/h1mC449N/603-FCE83-9-F37-4284-A2-B5-E4-A010950-FE7.jpg" alt="Slika" class="love-image" />
+            <img src="https://i.ibb.co/kgzWCCk4/IMG-2937.jpg" alt="Slika" class="love-image" />
         </div>
     </div>
     
