--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
         .love-image {
             display: block;
             margin: 20px auto;
-            width: 90%;
-            max-width: 300px;
+            width: 70%;
+            max-width: 200px; /* Smanjena maksimalna širina slike */
+            height: auto;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
@@ -118,7 +119,8 @@
                 font-size: 18px;
             }
             .love-image {
-                max-width: 90%;
+                width: 60%; /* Smanjena širina slike na mobilnim uređajima */
+                max-width: 180px; /* Još manja maksimalna širina na mobilnim uređajima */
             }
         }
     </style>
